--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span id="cal_year">20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Passing Year:</strong> <span>2023</span></li>
                   </li>
@@ -463,7 +463,11 @@
   </main><!-- End #main -->
 
 
-
+  <script>
+  let date =  new Date().getFullYear();
+  console.log(date);
+  document.getElementById("cal_year").innerHtml = date;
+  </script>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
