--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span id="cal_year">20</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span id="cal_year">21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Passing Year:</strong> <span>2023</span></li>
                   </li>
@@ -483,6 +483,16 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script type="text/javascript">
+    /*
+    *Calculate age
+    */
+    const age_calc = () => {
+      return ( new Date().getFullYear() - new Date(2001,11,15).getFullYear())
+    }
+    let x = document.getElementById("cal_year")
+    x.innerHTML = age_calc().toString()
+  </script>
 
 </body>
 
