Updated projects into index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h3 class="resume-title">Sem 6</h3>
             <div class="resume-item">
               <h4>Online Hair Salon System</h4>
-              <h5><a href="https://github.com/yashvaghani9115/Online_Hair_Salon_System/tree/main" class="text-white" target="_blank">Source</a></h5>
+              <h5><a href="https://github.com/yashshah935/React-App" class="text-white" target="_blank">Source</a></h5>
               <p><em>it is used for reduce wait time.</em></p>
               <p><strong>Frontend:</strong> React</p>
               <p><strong>Backend:</strong> Express</p>
@@ -154,7 +154,7 @@
             <h3 class="resume-title">Sem 5</h3>
             <div class="resume-item">
               <h4>Online Email System</h4>
-              <h5><a href="https://github.com/SutharUtsav/Online-Email-System" class="text-white" target="_blank">Source</a></h5>
+              <h5><a href="https://github.com/yashshah935/Angular-App" class="text-white" target="_blank">Source</a></h5>
               <p><em>We can send mail and also check status of message delivery.</em></p>
               <p><strong>Frontend:</strong> Angular</p>
               <p><strong>Backend:</strong> Express</p>
@@ -163,10 +163,10 @@
 
             <div class="resume-item">
               <h4>Online Mobile Recharge System</h4>
-              <h5><a href="https://github.com/SutharUtsav/OnlineMobileRechargeSystem" class="text-white" target="_blank">Source</a></h5>
-              <p><em>Mainly focus on learning ASP.NET </em></p>
-              <p><strong>Framework:</strong> ASP.NET</p>
-              <p><strong>Database:</strong> MSSQL</p>
+              <h5><a href="https://github.com/yashshah935/Open_Community_Chat" class="text-white" target="_blank">Source</a></h5>
+              <p><em>Learned Redux and Firebase </em></p>
+              <p><strong>Framework:</strong> MERN</p>
+              <p><strong>Database:</strong> Firebase</p>
             </div>
           </div>
 
