--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>Online Mobile Recharge System</h4>
+              <h4>Community Live chat Application</h4>
               <h5><a href="https://github.com/yashshah935/Open_Community_Chat" class="text-white" target="_blank">Source</a></h5>
               <p><em>Learned Redux and Firebase </em></p>
               <p><strong>Framework:</strong> MERN</p>
@@ -195,9 +195,7 @@
               <h4>Bachelor Of Engineering</h4>
               <h5>2019 - 2023</h5>
               <p><em>Dharamsinh Desai , Faculty Of Technology , Nadiad</em></p>
-              <p>1st Year : 8.9 CPI</p>
-              <p>2nd Year : 8.8 CPI</p>
-              <p>3rd Year : 8.7 CPI</p>
+              <p> CGPA : 8.84/10 </p>
             </div>
           </div>
           <div class="col-lg-4" data-aos="fade-up">
@@ -296,7 +294,7 @@
               </div>
             </div>
             <div class="progress">
-              <span class="skill">WordPress(Basic) <i class="val">50%</i></span>
+              <span class="skill">AWS Glue & Lambda <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -426,7 +424,7 @@
                   <div class="gmap_canvas">
                     <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no"
                       marginheight="0" marginwidth="0"
-                      src="https://maps.google.com/maps?width=472&amp;height=610&amp;hl=en&amp;q=HHAeXchange&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.470396263502!2d79.02950820866226!3d21.053866580520815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4bf1856aaaaab%3A0x7fa4b76592f943e2!2sGlobalLogic%20India%20Private%20Limited!5e0!3m2!1sen!2sin!4v1708579656430!5m2!1sen!2sin"></iframe>
                   </div>
                 </div>
               </div>
