--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="assets/img/profile.jpg" alt="..." class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Yash Shah</a></h1>
         <div class="social-links my-3 text-center">
-          <a class="social" href="https://www.instagram.com/y_a_s_h_935" target="_blank"><i
+          <a class="social" href="https://www.instagram.com/yashshah_1511" target="_blank"><i
               class="fab fa-instagram fa-2x"></i></a>
           <a class="social" href="https://twitter.com/Yashsha26424549" target="_blank"><i
               class="fab fa-twitter fa-2x"></i></a>
